# memory

./: .gitignore  CONFIG_PLAN.md  Cargo.toml  PROMPT.md  README.md  TODO.md  check_db.sh  check_session.sql  compound-memory-analysis.md  diesel.toml  memory_optimizer_prompt.md
.cargo/: config.toml
docs/: convergence-search-proposal.md  session_context_design.md
src/: bootstrap.rs  cli.rs  commands.rs  config.rs  dashboard.html  dashboard.rs  generate.rs  llm.rs  main.rs  plugin.rs  registry.rs  server.rs  tools.rs
src/embedding/: generator.rs  mod.rs  reranker.rs  similarity.rs
src/engram/: association.rs  bootstrap.rs  brain.rs  config_toml.rs  decompose.rs  engram.rs  identity.rs  mod.rs  persistence.rs  search.rs  session.rs  sqlite_storage.rs  storage.rs  substrate.rs
src/engram/storage/: diesel.rs  memory.rs  mod.rs  models.rs  rrf.rs  schema.rs  sqlite.rs  vector.rs
src/identity/: classifier.rs  mod.rs  store.rs  types.rs
src/identity/storage/: diesel.rs  mod.rs  models.rs  schema.rs
src/install/: claude_md.rs  clients.rs  codex.rs  json_client.rs  mod.rs
src/lang/: mod.rs
src/lang/english/: bench_cases.rs  mod.rs  parsing.rs  temporal.rs
src/lenses/: bootstrap.rs  mod.rs
src/memory_core/: association.rs  bootstrap.rs  brain.rs  memory.rs  mod.rs  persistence.rs  search.rs  session.rs  substrate.rs
src/memory_core/storage/: diesel.rs  memory.rs  mod.rs  models.rs  rrf.rs  schema.rs  vector.rs
src/plans/: bootstrap.rs  mod.rs  store.rs
src/plans/storage/: diesel.rs  mod.rs  models.rs  schema.rs
src/plugins/: bootstrap.rs  mod.rs
src/reference/: bootstrap.rs  citation.rs  error.rs  harness.rs  indexer.rs  mod.rs  sanitize.rs  searcher.rs  source.rs
src/reference/extractor/: mod.rs  pdf_extract_impl.rs
src/reference/profiles/: dsm5.rs  dsm5_handbook.rs  icd11.rs  mod.rs  nasw_ethics.rs
src/storage/: database.rs  error.rs  mod.rs  models.rs  schema.rs
src/tools/: date_resolve.rs  instructions.rs  mod.rs  open_dashboard.rs  ui_open.rs
src/tools/config/: get.rs  mod.rs  set.rs
src/tools/engram/: associate.rs  associations.rs  create.rs  delete.rs  get.rs  graph.rs  mod.rs  query_expansion.rs  recall.rs  search.rs  stats.rs
src/tools/identity/: add.rs  add_instruction.rs  add_typed.rs  get.rs  list.rs  mod.rs  remove.rs  remove_instruction.rs  search.rs  set.rs  setup.rs
src/tools/lenses/: get.rs  list.rs  mod.rs
src/tools/memory/: associate.rs  associations.rs  create.rs  delete.rs  get.rs  graph.rs  mod.rs  recall.rs  search.rs  stats.rs
src/tools/plans/: add_step.rs  complete_step.rs  get.rs  list.rs  mod.rs  start.rs  stop.rs
src/tools/reference/: citation.rs  get.rs  list.rs  mod.rs  search.rs  sections.rs
templates/: graph.html
