[package]
name = "memoryco"
version = "0.9.0"
edition = "2024"
description = "MemoryCo — local-first AI memory system"
license = "MIT"

[[bin]]
name = "memoryco"
path = "src/main.rs"

[features]
default = ["sqlite"]
sqlite = ["diesel/sqlite", "diesel/returning_clauses_for_sqlite_3_35"]
postgres = ["diesel/postgres"]

[dependencies]
sml_mcps = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
diesel = { version = "2.2" }
dirs = "6.0"
clap = { version = "4.5", features = ["derive"] }
pdf-extract = "0.7"
thiserror = "2.0"
regex = "1.10"
toml_edit = "0.22"
self_update = { version = "0.42", default-features = false, features = ["rustls", "archive-tar", "compression-flate2"] }
fastembed = "5.8"

[dev-dependencies]
tempfile = "3.15"
