[package]
name = "memoryco"
version = "0.9.8"
edition = "2024"
description = "MemoryCo — local-first AI memory system"
license = "MIT"

[[bin]]
name = "memoryco"
path = "src/main.rs"

[features]
default = ["sqlite"]
sqlite = ["diesel/sqlite", "diesel/returning_clauses_for_sqlite_3_35"]
postgres = ["diesel/postgres"]

[dependencies]
sml_mcps = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
diesel = { version = "2.2" }
dirs = "6.0"
clap = { version = "4.5", features = ["derive"] }
pdf-extract = "0.7"
thiserror = "2.0"
regex = "1.10"
toml_edit = "0.22"
memoryco_updater = { path = "../updater" }
tiny_http = "0.12"
fastembed = { version = "5.8", default-features = false, features = ["hf-hub-rustls-tls", "image-models"] }
ort = { version = "2.0.0-rc", default-features = false, features = ["std", "ndarray", "download-binaries", "copy-dylibs", "tls-rustls"] }
chrono = "0.4"
whatlang = "0.16"

[dev-dependencies]
tempfile = "3.15"
