[package]
name = "memoryco"
version = "0.9.8"
edition = "2024"
description = "MemoryCo — local-first AI memory system"
license = "MIT"

[[bin]]
name = "memoryco"
path = "src/main.rs"

[features]
default = ["sqlite"]
sqlite = ["diesel/sqlite", "diesel/returning_clauses_for_sqlite_3_35"]
postgres = ["diesel/postgres"]
cuda = ["memoryco-llm/cuda"]
vulkan = ["memoryco-llm/vulkan"]

[dependencies]
sml_mcps = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
diesel = { version = "2.2" }
dirs = "6.0"
clap = { version = "4.5", features = ["derive"] }
pdf-extract = "0.7"
thiserror = "2.0"
regex = "1.10"
toml_edit = "0.22"
memoryco_updater = { path = "../updater" }
memoryco-llm = { path = "../llm" }
memoryco_design = { git = "ssh://git@github.com/memoryco/design.git" }
tiny_http = "0.12"
chrono = "0.4"
whatlang = "0.16"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }

[patch.crates-io]
llama-cpp-2 = { path = "/Users/bsneed/work/memoryco/llama-cpp-rs/llama-cpp-2" }
llama-cpp-sys-2 = { path = "/Users/bsneed/work/memoryco/llama-cpp-rs/llama-cpp-sys-2" }

[dev-dependencies]
tempfile = "3.15"
